Gaim: The Pimpin' Penguin IM Clone that's good for the soul!

version 0.72
	* Swedish translation updated (Tore Lundqvist (luntor))

version 0.71 (10/09/2003):
	* The right-click menu for e-mail links now presents a "Copy E-Mail
	  Address" item
	* Fix sort by idle to behave as it did pre-contact support (David
	  Smock)
	* Display AIM away messages in the tooltip for buddies when
	  they are away
	* Support for Buddy Comments for AIM and ICQ buddies
	* Window icons are now set as buddy icons or status icons
	* Get User Info in MSN and Yahoo now return an error indicating that
	  the information doesn't exist if the profile is empty (parts by
	  Nathan Poznick)
	* Added startup notification support for window managers that support it.
	* The protocol icon for an account in the accounts window will now
	  "pulse" when signing the account on.
	* Zephyr formatting fixes (Arun A. Tharuvai)
	* Zephyr can connect to chats (Karsten Huneycutt)
	* SSL support can now be provided by third party plugins.
	* Multiple copies of gaim installed at different locations no
	  longer attempt to load the same, possibly incompatible plugins
	  (Robert McQueen)
	* Implemented another new Yahoo! authentication method
	* Fixed a bug displaying Chinese MSN messages (Ambrose C. LI).
	* Additional fixes and checks for the perl build process (Sean Burke).
	* Massive core/UI splitting.
	* Re-write of Jabber protocol plugin
	* Conversation API changes.
	* Some plugins must be updated due to code variable changes,
	  function name changes, and change of behavior for certain
	  functions.
	* Chinese (Simplified) translation updated (Funda Wang)
	* Chinese (Traditional) translation updated (Ambrose C. Li)
	* Czech translation updated (Miloslav Trmac)
	* Danish translation updated (Morten Brix Pedersen (mbrix))
	* Finnish translation updated (Ambrose C. LI (acli))
	* French translation updated (Eric Boumaour)
	* Italian translation updated (Claudio Satriano)